--- a/Examenation-html-css/index.html
+++ b/Examenation-html-css/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allpha travel</title>
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Bellefair&family=Love+Light&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -42,15 +42,12 @@
     </header>
     
     <main class="container my-5">
-        <!-- Sektion med stor bild -->
         <section class="text-center mb-5">
             <h1>Välkommen till Allpha Travel</h1>
             <p>Vi erbjuder högkvalitativa tjänster för alla dina behov!</p>
             <img src="images/iar2.png" alt="Stor bild" class="img-fluid big-image mb-5">
         </section>
-        
-        <!-- Sektion med 3 bilder i en rad med gutter (mellanrum) -->
-        <section class="row g-4 mb-5">  <!-- Använd Bootstrap's g-4 för mellanrum -->
+        <section class="row g-4 mb-5">  
             <div class="col-md-4">
                 <img src="images/smali air.jpg" alt="Bild 1" class="img-fluid gallery-image">
             </div>
@@ -61,11 +58,11 @@
                 <img src="images/iar2.png" alt="Bild 3" class="img-fluid gallery-image">
             </div>
         </section>
-
-        <!-- Sektion med text vid sidan av bilder -->
         <section class="row align-items-center">
             <div class="col-md-6">
-                <p class="lead">Välkommen till Allpha Travel! Vi erbjuder ett brett utbud av resetjänster och strävar alltid efter att göra din resa så smidig och bekväm som möjligt. Oavsett om du letar efter affärs- eller nöjesresor, har vi de rätta alternativen för dig.</p>
+                <p> Välkommen till Allpha Travel! Vi erbjuder ett brett utbud av resetjänster och strävar <strong>Bellefair</strong> alltid efter att göra din resa så smidig och bekväm som möjligt.</p>
+                <p>Oavsett om du letar efter affärs- eller nöjesresor, har vi de rätta alternativen för dig <em>Love Light</em>.</p>
+
             </div>
             <div class="col-md-6">
                 <img src="images/air.jpeg" alt="Bild bredvid text" class="img-fluid gallery-image ">
@@ -75,8 +72,8 @@
     <footer>
     <div class="footerContainer">
         <div class="socialIcons">
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com/liibaan.goteborg"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/nabiil_cade?igsh=MWRqYjVhcTEzZjBidg%3D%3D&utm_source=qr"><i class="fa-brands fa-instagram" ></i></a>
             <a href=""><i class="fa-brands fa-twitter"></i></a>
             <a href=""><i class="fa-brands fa-google-plus"></i></a>
 
